# devcade-onboard-ui-revamp

./: .gitignore  .gitmodules  .xinitrc  README.md
HACKING/: Dockerfile  build-environment.sh  export-all.sh  launch-environment.sh  upload.py
dcu/: .build-args.template  .env.template  .xinitrc  Dockerfile  Dockerfile.nvidia  README.md  bashrc-check.sh  build-nvidia.sh  build.sh  build_container.sh  create-iso-nvidia.sh  create-iso.sh  docker-compose.yml  preseed.txt  run.sh  tty1_service_override.conf
dcu/config-files/: .bashrc  .xinitrc  devcade_onboard  dkms.sh  export-all  export-all.sh  files.conf  onboard  prepare-root.conf  rc.xml  sleep.conf  sshd.local  sshd_config  users.conf  wait-for-driver-install.sh
idiot/: .env  .xinitrc  bashrc-check.sh  configure.sh  devcade-onboard.service  preseed.txt  update.sh  update_onboard.sh  xinitrc
onboard/: .env.template  DevcadeClient.cs  Game1.cs  Menu.cs  MenuCard.cs  Program.cs  RectangleSprite.cs  S3CreateAndList.cs  Util.cs  app.config  app.manifest  build.py  onboard  onboard.csproj  onboard.sln  release.sh  to_linux.ps1
onboard/Content/: Content.mgcb  devcade-menu-big.spritefont  devcade-menu-title.spritefont
onboard/backend/: Cargo.toml
onboard/backend/src/: api.rs  command.rs  flatpak.rs  lib.rs  main.rs  nfc.rs
onboard/backend/src/api/: mod.rs  schema.rs
onboard/backend/src/servers/: game.rs  mod.rs  onboard.rs  persistence.rs
onboard/devcade/: Client.cs  DevcadeGame.cs
onboard/frontend/: LogConfig.cs  MenuCard.cs  Program.cs  app.config  onboard.csproj  onboard.sln
onboard/frontend/Content/: devcade-menu-big.spritefont
onboard/godot-frontend/: .gitignore  AutoLoad.cs  AutoLoad.cs.uid  FpsLabel.cs  FpsLabel.cs.uid  GuiManager.cs  GuiManager.cs.uid  LogConfig.cs  LogConfig.cs.uid  LogConfigAutoLoad.cs  Main.cs  NotificationService.cs  NotificationService.cs.uid  OnboardREADME.md  README.md  TestGui.cs  app.config  export.sh  godot-frontend.csproj  godot-frontend.csproj.old  godot-frontend.sln  icon.svg.import  main.tscn  missing_texture.png.import  project.godot  test_gui.tscn  test_layout.tscn
onboard/notifications/: icon.svg.import  main.tscn  progress_bar.gd  progress_bar.gd.uid
onboard/notifications-service/: main.gd  main.gd.uid  main.tscn  project.godot
onboard/types/: Cargo.toml
onboard/types/src/: lib.rs  schema.rs
onboard/ui/: Devcade.cs  Menu.cs
onboard/util/: Cmd.cs  Container.cs  Env.cs  ILogExtensions.cs  Network.cs  Result.cs  Zip.cs
(+197 files in other folders)
